# ROAR-24-Perception

./: README.md
April_tags/: AprilTags_README.md
Camera Calibration/: Camera Calibration.ipynb  Circular_pattern_points.yml  camera_calibration.md
Codes to Cheack camera/: README_CAM.md  trial 1.ipynb  trial1 With Hub.ipynb
Kinect_plugin/: Kinect_README.md  camera_system.urdf  stream_sim.py
Reallife_detection/: calc_pub.py  cameras_capture.py  subsribe_detect.py  supporting_functions.py
Simplified SW Assembly/: joint1.SLDPRT  joint2.SLDPRT  joint3.SLDPRT  joint4.SLDPRT  joint5.SLDPRT  joint6.SLDPRT  joint_2.SLDPRT  left_gripper.SLDPRT  right_gripper.SLDPRT  simp_asse,.SLDASM  simp_base.SLDPRT  ~$joint_2.SLDPRT
Trial_Codes/: README_TRIAL.md  pub.py  sum.py  (+3 more)
pick_and_place_simulation/: .setup_assistant  CMakeLists.txt  package.xml
pick_and_place_simulation/config/: arm_urdf.srdf  fake_controllers.yaml  joint_limits.yaml  new_ros_controllers.yaml  stomp_planning.yaml
pick_and_place_simulation/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  full_robot_arm_sim.launch  gazebo.launch  move_group_interface.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
pick_and_place_simulation/scripts/: move_group_interface.py  pose_publisher.py
(+4686 files in other folders)
